added some css styles to the card class in index.html, added a search bar for other cities that will be searched.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,23 @@
     <link rel="stylesheet" href="weather.css">
 </head>
 <body>
-<div class="icon"></div>
+<div class="container">
+   
+    <textarea name="" id="Search"  cols="30" rows="10"></textarea>
+    <button onclick="query()">Search</button>
+
+    <div class="card">
+        <div class="icon"></div>
+        <div class="cityName"></div>
+        <div class="time"></div>
+        <div class="temp"></div>
+        <div class="wind"></div>
+        <div class="humidity"></div>
+        <div class="sunrise"></div>
+        <div class="sunset"></div> 
+        
+    </div>
+</div>
 
 
 
