added more js code to additinal cards

--- a/index.html
+++ b/index.html
@@ -83,12 +83,12 @@
     <div class="card6">
         <div class="icon6"></div>
         <div class="sec-container">
-            <div class="date"></div>
-            <div class="cityName"></div>
-            <div class="time"></div>
-            <div class="temp"></div>
-            <div class="wind"></div>
-            <div class="humidity"></div>
+            <div class="date6"></div>
+            <div class="cityName6"></div>
+            <div class="time6"></div>
+            <div class="temp6"></div>
+            <div class="wind6"></div>
+            <div class="humidity6"></div>
         </div>
     </div>
     </div>   
