added a title, centered text in card, fixed space indetation in cards

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   
     <div class="row">
-        
+        <h1>Search A City For Next 5 Days Forcast:</h1>
         <div class="card2">
             <div class="icon2"></div>
             <div class="sec-container">
